<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/aplicacion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/Layout"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="CerebritosBilingues" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:gravity="center"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etPasswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwd"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvPasswdOlvidado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/passwdOlvidado"
                    android:onClick="claseRecordarPasswd"
                    android:textColor="@color/black"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">


                        <fragment
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:id="@+id/fragment"
                            android:name="johannpolania.com.cerebritosbilingues.FbFragment"
                            tools:layout="@layout/fragment_fb">
                        </fragment>

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/id_tvStatusEmail"
                            android:text="E-mail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp"
                            android:textColor="@color/whitesmoke"/>

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/id_tvStatusUser"
                            android:text="User"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:orientation="vertical">


                        <com.google.android.gms.common.SignInButton android:id="@+id/sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            tools:visibility="gone" />
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:id="@+id/bLogin"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/gray"
                    android:onClick="ingresar"/>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/id_sign_out_button"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:textSize="14sp"
                    android:text="Cerrar Sesión"
                    android:textColor="@color/darkslategray"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:layout_margin="4dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/tvRegistrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registrarse"
                    android:onClick="registrarse"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

